--- a/index.html
+++ b/index.html
@@ -3,28 +3,38 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>About | Your Name</title>
+  <title>About | Thomas</title>
   <link rel="stylesheet" type="text/css" href="assets/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
-  <nav class="navbar navbar-inverse">
-    <div class= "container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href=""><p>Thomas</p></a>
-         <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">About</a></li>
-            <li class="active"><a href="portfolio.html">Portfolio</a></li>
-            <li class="active"><a href="contact.html">Contact</a></li>
-          </ul>
-      </div>
-    </div>
-    </div>
+<div class="row">
+    <div class="col-md-12"></div>
+  
+  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <a class="navbar-brand"><strong>Thomas Coughlin</strong></strong></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html"sr-only>About</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+        
+      </ul>
+  </div>
+  
+  </div>
   </nav>
-
 
   <div class="container">
       <div class="row">
