--- a/portfolio.html
+++ b/portfolio.html
@@ -42,8 +42,8 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="images/technics-q-c-640-480-1.jpg" alt="Word Guess">
-        <h3>Word Guess</h3>
+        <a href="https://github.com/tcough99/liri-app-thomas"><img src="https://images.techhive.com/images/article/2016/11/siri-mac-icon-100694914-large.jpg" alt="Ask Liri">
+        <h3>Ask Liri</h3></a>
       </div>
       <div class="work">
         <img src="images/technics-q-c-640-480-2.jpg" alt="RPG Game">
